--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^3.8.0",
     "firebase": "^9.9.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "material-icons": "^1.11.3",
     "materialize-css": "^1.0.0",
     "ng2-charts": "^3.0.11",
